--- a/Ingles/cssdacopa.css
+++ b/Ingles/cssdacopa.css
@@ -195,8 +195,6 @@ footer{
     }
     .logo{
         width: 100%;
-  
-      
         border: none;
     }    
     .slogan, .fora, nav{
@@ -208,12 +206,12 @@ footer{
 
     main, iframe{
         height: 445px;
-        width: 320px;
+        width: 79vw;
     }
     .mobile{
         position: relative;
         display: block;
-        width: 20%;
+        width: 21vw;
         height: 600px;
         background-color: green;
         transition: 1s;
@@ -221,11 +219,11 @@ footer{
         overflow: hidden;
     }
     .mobile.expandir{
-        width: 80%;
+        width: 80vw;
     }
     .mobcoisas{
        
-        margin-left: 82px;
+        margin-left: 24vw;
         display: none;
         align-items: center;
         
@@ -269,7 +267,7 @@ footer{
     }
     footer{
         height:90px;
-        width: 100%;
+        width: 100vw;
         z-index: 1;
     }
     .redes i{
